--- a/vue/package.json
+++ b/vue/package.json
@@ -12,6 +12,7 @@
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.5",
     "@tailwindcss/forms": "^0.5.9",
+    "axios": "^1.7.7",
     "vue": "^3.4.37",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
