--- a/vue/package.json
+++ b/vue/package.json
@@ -13,6 +13,7 @@
     "@heroicons/vue": "^2.1.5",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
+    "uuid": "^10.0.0",
     "vue": "^3.4.37",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
